(#19) Add MJPEG video streaming v1
